# dbviews-django

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
src/dbviews/: apps.py  autodetector.py  exceptions.py  fields.py  metaclasses.py  operations.py  views.py
src/dbviews/views/: __init__.py  base.py  fields.py  metaclasses.py
