[tool.poetry]
name = "django-dbviews"
version = "0.0.1"
description = ""
authors = ["Keshav Mohta <keshavmohta09@gmail.com>"]
readme = "README.md"
packages = [
    { include = "dbviews", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
