[tool.poetry]
name = "django-dbviews"
version = "0.0.1"
description = "Support of database views and materialized views in django web framework."
authors = ["Keshav Mohta <keshavmohta09@gmail.com>"]
readme = "README.md"
packages = [
    { include = "dbviews", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
django = ">=4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
