[tool.poetry]
name = "dbviews-django"
version = "0.1.3"
description = "Support of database views and materialized views in django web framework."
authors = ["Keshav Mohta <keshavmohta09@gmail.com>"]
maintainers = ["Keshav Mohta <keshavmohta09@gmail.com>"]

readme = "README.md"
packages = [
    { include = "dbviews", from = "src" },
]

license="MIT"
homepage="https://github.com/keshavmohta09/dbviews-django/"

classifiers=[
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Operating System :: OS Independent',
    'Environment :: Web Environment',
    'Framework :: Django',
]


[tool.poetry.dependencies]
python = ">=3.9"
django = ">=4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
